# rlhf-audit-trail

./: .bandit  .bandit.yml  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  .safety-policy.yml  .secrets.baseline  =0.110.0  =1.3.0  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_RESEARCH_REPORT.md  BACKLOG.md  CHANGELOG.md  CLAUDE_IMPROVEMENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT_ENHANCED.md  PROJECT_CHARTER.md  README.md  SDLC_ENHANCEMENT_REPORT.md  SDLC_IMPLEMENTATION_COMPLETE.md  SECURITY.md  TERRAGON_COMPREHENSIVE_QUALITY_REPORT.json  TERRAGON_IMPLEMENTATION_SUMMARY.md  TERRAGON_SDLC_FINAL_REPORT.md  TERRAGON_SDLC_STATUS.md  alembic.ini  autonomous_research_quality_report.json  comprehensive_test_results.json  (+37 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  dependabot.yml  project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  compliance.yml  dependabot-auto-approve.yml  release.yml  security.yml
.terragon/: autonomous-executor.py  metrics-report.md  metrics-tracker.py  orchestrator.py  simple-discovery.py  terragon-sdlc.sh  value-config.yaml  value-discovery.py  value-metrics.json
audit_data/annotations/011ebb2e-ebaa-4b02-b955-265a974cba21/: 074c545f-99c4-48b6-8312-2456b91eaca6.json  149a3eb7-c689-49d8-b45a-e8f20ac72179.json  1fbc1d4e-e585-46f8-aad3-fa7ade09b544.json  76be4ed5-7ed9-4eb5-854e-7a2322a2edcc.json  7ca9039c-dfcf-4bd3-8ade-f4f81341a2f7.json  89e31787-27ca-43b9-a244-25a8858aead1.json  f8ff0088-2513-420f-9de2-8c8d53714fca.json  f95bc90f-d5d2-40ac-bb3b-e7ed40621e8f.json  fa0ad21b-e1e8-4a34-97f0-0c928dbd4e5b.json  fa687d7c-df29-4055-baaf-e1080a08c78f.json
audit_data/annotations/05679b42-fd39-4b47-a5a1-1f675cac9b84/: 26a897e3-1b6a-4aa1-92d0-cff84fd5a4ef.json  2fc39632-245e-438d-b111-b3baf0ed5712.json  4c7cb6a2-9506-435c-ba18-addcc25e2aee.json  7659d5ce-ba27-4a90-bc9a-913afac0b75d.json  77fd255b-5648-494d-8d85-f7c90aa1684f.json
benchmarks/: __init__.py  run_benchmarks.py
compliance/: compliance-validator.py  eu-ai-act-checklist.yml
deploy/: production-docker-compose.yml  production-env-template
deploy/config/: production.env  staging.env
docker/: Dockerfile  Dockerfile.production  entrypoint.sh  gunicorn.conf.py  healthcheck.py  init-db.sql
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DEVELOPMENT_ENVIRONMENT.md  ROADMAP.md  SDLC_CHECKPOINT_STRATEGY.md  SDLC_IMPLEMENTATION_GUIDE.md  SETUP_REQUIRED.md  index.md
docs/adr/: 0001-architecture-decision-record-template.md  0002-python-technology-stack.md  0003-cryptographic-audit-trail-design.md  README.md
docs/deployment/: advanced-deployment.md  build-guide.md
docs/guides/: developer-guide.md  user-guide.md
docs/innovation/: ai-development-integration.md  technology-radar.md
docs/runbooks/: deployment-procedures.md  incident-response.md  maintenance-procedures.md
docs/workflows/: README.md  WORKFLOW_SETUP_GUIDE.md  ci-cd-setup.md  ci-workflow.md  dependabot-config.md  github-actions-setup.md  github-actions.md
examples/: basic_usage.py
kubernetes/: README.md  autoscaling.yaml  configmaps.yaml  deploy.sh  deployment.yaml  kustomization.yaml  namespace.yaml  postgresql.yaml  secrets.yaml
migrations/: env.py
migrations/versions/: 0001_initial_audit_tables.py
monitoring/: docker-compose.monitoring.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/docs/: observability-guide.md
monitoring/loki/: loki-config.yaml
monitoring/otel/: otel-collector-config.yaml
monitoring/performance/: performance-monitoring.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail-config.yaml
scripts/: build.sh  deploy-production.sh  deploy.sh  deps.sh  dev-setup.sh  innovation_pipeline.py  performance_monitor.py  quality_gates.py  release.sh  security-scan.sh  setup.py  supply_chain_security.py  test-runner.py  update-deps.sh
scripts/automation/: collect-metrics.py  dependency-updater.py  repository-health.py
security/: security-checklist.md
src/: data_pipeline.py  ml_engine.py
src/quantum_task_planner/: __init__.py  cli.py  core.py  exceptions.py  integration.py  monitoring.py  optimizer.py  performance.py  scheduler.py  security.py  validation.py
src/rlhf_audit_trail/: __init__.py  adaptive_cache_system.py  adaptive_resilience_system.py  adaptive_security.py  advanced_ml_quality_gates.py  advanced_monitoring.py  ai_safety_research_framework.py  api.py  audit.py  auto_scaling.py  autonomous_ml_engine.py  autonomous_monitoring.py  autonomous_research_orchestrator.py  cli.py  compliance.py  comprehensive_quality_gates.py  config.py  core.py  crypto.py  dashboard.py  database.py  enhanced_progressive_gates.py  enhanced_reliability.py  exceptions.py  federated_learning_auditor.py  health_check.py  health_monitoring.py  health_system.py  hyper_scale_quantum_engine.py  integrations.py  internationalization.py  model_card.py  monitoring.py  multi_region_deployment.py  performance.py  performance_engine.py  performance_optimization.py  privacy.py  production_reliability.py  progressive_quality_gates.py  (+11 more)
tests/: __init__.py  compliance_helpers.py  conftest.py  test_basic.py  test_comprehensive_integration.py  test_generation_3_features.py  test_integration_comprehensive.py  test_performance.py  test_quantum_core.py  test_validation.py  utils.py
tests/contract/: __init__.py  test_api_contracts.py
tests/docs/: testing_guide.md
tests/e2e/: __init__.py  test_complete_workflow.py
tests/fixtures/: __init__.py  sample_data.py
tests/integration/: __init__.py  test_audit_trail_integration.py
tests/mutation/: __init__.py  test_mutation_testing.py
tests/performance/: __init__.py  test_benchmarks.py
tests/unit/: __init__.py  test_privacy_engine.py
(+208 files in other folders)
