[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rlhf-audit-trail"
version = "0.1.0"
description = "End-to-end pipeline for verifiable provenance of RLHF steps with EU AI Act compliance"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Daniel Schmidt", email = "daniel@terragonlabs.com"},
]
keywords = ["rlhf", "ai-audit", "compliance", "eu-ai-act", "privacy", "ml-governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.3.0",
    "transformers>=4.40.0",
    "trlx>=0.7.0",
    "cryptography>=42.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.110.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "boto3>=1.34.0",
    "wandb>=0.16.0",
    "streamlit>=1.35.0",
    "plotly>=5.20.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "opacus>=1.4.0",
    "merkletools>=1.0.3",
]

[project.optional-dependencies]
aws = ["boto3>=1.34.0"]
gcp = ["google-cloud-storage>=2.10.0"]
azure = ["azure-storage-blob>=12.19.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.0.0",
    "tox>=4.0.0",
]
testing = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "hypothesis>=6.70.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-autodoc-typehints>=1.23.0",
]

[project.urls]
Homepage = "https://github.com/terragonlabs/rlhf-audit-trail"
"Bug Reports" = "https://github.com/terragonlabs/rlhf-audit-trail/issues"
"Source" = "https://github.com/terragonlabs/rlhf-audit-trail"
"Documentation" = "https://rlhf-audit-trail.readthedocs.io/"

[project.scripts]
rlhf-audit = "rlhf_audit_trail.cli:main"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rlhf_audit_trail"]

[tool.black]
target-version = ['py310']
line-length = 88
skip-string-normalization = true

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["E501", "COM812", "ISC001"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
python_files = ["tests/*.py", "test_*.py", "*_test.py"]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m "not slow"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "compliance: marks tests as compliance verification tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310,py311,py312,lint,mypy
skip_missing_interpreters = true

[testenv]
deps = pytest>=7.0.0
       pytest-cov>=4.0.0
       pytest-asyncio>=0.21.0
commands = pytest {posargs}

[testenv:lint]
deps = black>=23.0.0
       ruff>=0.3.0
commands = 
    black --check .
    ruff check .

[testenv:mypy]
deps = mypy>=1.8.0
commands = mypy src
"""
